# developmental-manifold-atlas

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  outreach_message.md  pyproject.toml
.github/: pull_request_template.md
ci/: privacy_terms.txt
dashboards/: backend.json  data_quality.json  hypothesis_eligibility.json  normalized_demo_records.json  pilot_agd_craniofacial.json  standards.json  summary.json
dmatlas/: __init__.py  cli.py
docs/: dashboard.html  data-standards.html  developer.html  governance.html  hypotheses.html  index.html  launch.html  modeling.html
examples/: phase_two_standardization_checklist.md  register_dataset.sh
governance/: data_access_model.md  ethics.md  language_guardrails.md  risk_register.md  scientific_reputation.md  working_groups.md
hypotheses/: hypotheses.json
measurements/: agd_protocol.md  breeding_protocol.md  craniofacial_protocol.md  fertility_protocol.md  neonatal_protocol.md  protocol_matrix.md
models/: hypothesis_testing_lifecycle.md  modeling_principles.md  pilot_agd_craniofacial.md
notebooks/: README.md
papers/: publication_strategy.md  white_paper_outline.md
pipelines/: generate_dashboard.py
registry/: contributors.json  datasets.json  derived_variables.json  equivalence_classes.json  funding_opportunities.json  institutions.json  instruments.json  landmarks.json  protocol_readiness.json  trait_vocabulary.json  working_groups.json
reports/: atlas_backend_report.md
schemas/: contributor.schema.json  dataset.schema.json  derived-variable.schema.json  equivalence-class.schema.json  (+8 more)
(+16 files in other folders)
