[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "developmental-manifold-atlas"
version = "0.1.0"
description = "Open infrastructure for developmental manifold research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
dmatlas = "dmatlas.cli:main"

[tool.setuptools]
packages = ["dmatlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
